letsencryptCertWithIngress/fleetman-ingress-nginxcontroller.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  name: fleetman-ingress-controller
  namespace: default
spec:
  rules:
   - http:
      paths:
      - backend:
          serviceName: fleetman-webapp
          servicePort: 80
        path: /
  tls:
  - hosts:
    - f83c9f1764ec.ngrok.io
    secretName: fleetman-webapp-secret
---
